--- a/pyotest/devices/device1/Dockerfile
+++ b/pyotest/devices/device1/Dockerfile
@@ -1,13 +1,25 @@
 FROM ubuntu:22.04
 
-# Instalar dependências para simulação de firmware
-RUN apt-get update && apt-get install -y qemu-system-arm python3 python3-pip
+# Atualiza e instala dependências essenciais
+RUN apt-get update && apt-get install -y \
+    qemu-system-arm \  # Emulador de ARM
+    python3 \
+    python3-pip \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copiar o firmware para dentro do container
-COPY firmware_v1.bin /firmware/
+# Define o diretório de trabalho
+WORKDIR /app
 
-# Copiar a aplicação que simula o dispositivo
-COPY app.py /app.py
+# Copia os arquivos necessários para o container
+COPY 50.0.0.3-r3.bin /firmware/50.0.0.3-r3.bin
+COPY app.py /app/app.py
 
-# Definir ponto de entrada (simulação do dispositivo)
-CMD ["python3", "/app.py"]
+# Instala dependências do Flask
+RUN pip3 install flask
+
+# Expor a porta usada pelo Flask
+EXPOSE 5000
+
+# Comando de entrada
+CMD ["python3", "/app/app.py"]
