--- a/.github/workflows/pyotest_pipeline.yml
+++ b/.github/workflows/pyotest_pipeline.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
 
-  docker-setup:
+  docker-setup-run:
     runs-on: ubuntu-latest
 
     steps:
@@ -39,12 +39,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
-      - name: Verify Docker installation
-        run: |
-          docker --version
-          docker compose version
-
       - name: Run Docker Compose
         run: |
           docker compose up --build 
-   
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-artifacts
+          path: reports/
+
+          if-no-files-found: warn
+
