--- a/.github/workflows/pyotest_pipeline.yml
+++ b/.github/workflows/pyotest_pipeline.yml
@@ -39,6 +39,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
+      - name: Fix file permissions
+        run: |
+          sudo chown -R $USER:$USER .
+
       - name: Run Docker Compose
         run: |
           docker compose up --build 
