--- a/.github/workflows/pyotest_pipeline.yml
+++ b/.github/workflows/pyotest_pipeline.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Run Docker Compose
         run: |
+          sudo mkdir -p /app/report
+          sudo mkdir -p /report
           docker compose up --build 
 
       - name: Upload artifacts
