--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,8 +76,20 @@ services:
       iot_bridge:
         ipv4_address: 172.20.0.17
 
+  h2o-automl:
+    image: h2oai/h2o-open-source-k8s-minimal:latest
+    container_name: h2o-automl
+    ports:
+      - "54321:54321"
+    restart: unless-stopped
+    networks:
+      iot_bridge:
+        ipv4_address: 172.20.0.18
+
+
   scanner:
     build: .
+    user: root
     container_name: scanner
     restart: no
     depends_on:
@@ -89,11 +101,13 @@ services:
       - http_directory_listing
       - mqtt_no_auth
       - ssh_old_banner
+      - h2o-automl
     volumes:
       - ./report:/app/report
+      - ./generated_tests:/app/generated_tests
     networks:
       iot_bridge:
-        ipv4_address: 172.20.0.18
+        ipv4_address: 172.20.0.19
 
 networks:
   iot_bridge:
