V 0.1 - [AML] starting to work

--- a/.github/workflows/pyotest_pipeline.yml
+++ b/.github/workflows/pyotest_pipeline.yml
@@ -45,15 +45,13 @@ jobs:
 
       - name: Run Docker Compose
         run: |
-          sudo mkdir -p /app/report
-          sudo mkdir -p /report
           docker compose up --build 
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: docker-artifacts
-          path: reports/
+          path: experiments/
 
           if-no-files-found: warn
 
