--- a/.github/workflows/pyotest_pipeline.yml
+++ b/.github/workflows/pyotest_pipeline.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Run Docker Compose
         run: |
-          docker compose up --build 
+          docker compose up --build --abort-on-container-exit
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
