--- a/dashboard/frontend/package.json
+++ b/dashboard/frontend/package.json
@@ -15,9 +15,10 @@
     "recharts": "^2.10.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.12"
-  }
+  "@vitejs/plugin-react": "^4.2.1",
+  "autoprefixer": "^10.4.14",
+  "postcss": "^8.4.31",
+  "tailwindcss": "^3.3.3",
+  "vite": "^5.1.0"
+}
 }
