--- a/pyotest/devices/http-vuln/httpd-vuln.conf
+++ b/pyotest/devices/http-vuln/httpd-vuln.conf
@@ -9,3 +9,13 @@ DavLockDB /usr/local/apache2/var/DavLock
     AllowOverride None
     Require all granted
 </Directory>
+
+# --- HIDDEN: Enable TRACE method (XST vulnerability) ---
+TraceEnable on
+
+# --- HIDDEN: Expose server-status (information disclosure) ---
+LoadModule status_module modules/mod_status.so
+<Location "/server-status">
+    SetHandler server-status
+    Require all granted
+</Location>
